[package]
name = "banana_pass"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-events = "*"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
 "HtmlElement", "HtmlSelectElement", "HtmlInputElement", "Node"] }
attrs = { path = "./proc_macros/attrs" }
with_length = { path = "./proc_macros/with_length" }

